docs/style.css
html, body {
  font-family: monospace;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  color: #191919; }

#sidebar {
  position: relative;
  display: inline-block;
  vertical-align: top;
  margin: 0;
  padding: 0;
  width: calc( 25% - 10px );
  height: 100%;
  overflow-y: scroll;
  background: #c8c8c8;
  background: -moz-linear-gradient(left, #c8c8c8 0%, #e1e1e1 100%);
  background: -webkit-gradient(left top, right top, color-stop(0%, #c8c8c8), color-stop(100%, #e1e1e1));
  background: -webkit-linear-gradient(left, #c8c8c8 0%, #e1e1e1 100%);
  background: -o-linear-gradient(left, #c8c8c8 0%, #e1e1e1 100%);
  background: -ms-linear-gradient(left, #c8c8c8 0%, #e1e1e1 100%);
  background: linear-gradient(to right, #c8c8c8 0%, #e1e1e1 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c8c8c8', endColorstr='#e1e1e1', GradientType=1 );
  border-right: 1px solid #c8c8c8; }
  #sidebar ul li {
    list-style: none;
    font-size: 18px; }
    #sidebar ul li:hover {
      list-style: georgian; }
  #sidebar a:link, #sidebar a:visited {
    text-decoration: none;
    color: #323232; }
  #sidebar ::-webkit-scrollbar {
    width: 2px;
    height: 2px; }
  #sidebar ::-webkit-scrollbar-button {
    width: 0px;
    height: 0px; }
  #sidebar ::-webkit-scrollbar-thumb {
    background: #e1e1e1;
    border: 0px none #ffffff;
    border-radius: 50px; }
  #sidebar ::-webkit-scrollbar-thumb:hover {
    background: #ffffff; }
  #sidebar ::-webkit-scrollbar-thumb:active {
    background: #000000; }
  #sidebar ::-webkit-scrollbar-track {
    background: #666666;
    border: 0px none #ffffff;
    border-radius: 50px; }
  #sidebar ::-webkit-scrollbar-track:hover {
    background: #666666; }
  #sidebar ::-webkit-scrollbar-track:active {
    background: #333333; }
  #sidebar ::-webkit-scrollbar-corner {
    background: transparent; }

main {
  position: relative;
  display: inline-block;
  vertical-align: top;
  margin: 0;
  padding: 0;
  width: 75%;
  height: 100%;
  overflow-y: scroll;
  background: white; }
  main a:link, main a:visited {
    text-decoration: none;
    color: #323232; }
  main a:hover, main a:active {
    text-decoration: none;
    color: #969696; }

h2 {
  width: auto; }
  h2:before {
    color: #969696;
    content: "# "; }

p {
  font-size: 16px; }

ul li {
  font-size: 18px; }

/*# sourceMappingURL=style.css.map */

